Applying Login UI and base web styling

--- a/cat-face/public/index.html
+++ b/cat-face/public/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<!--    <link rel="icon" href="<%= BASE_URL %>favicon.ico">-->
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
@@ -15,3 +14,10 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<style>
+    body {
+        background-image: url("https://cdna.artstation.com/p/assets/images/images/003/468/688/large/slawek-fedorczuk-slawek-fedorczuk-2016-09-16.jpg?1474009452");
+        background-position: top;
+    }
+</style>
