Made Game tab template and cleaned up code.

--- a/cat-face/public/index.html
+++ b/cat-face/public/index.html
@@ -19,5 +19,7 @@
     body {
         background-image: url("https://cdna.artstation.com/p/assets/images/images/003/468/688/large/slawek-fedorczuk-slawek-fedorczuk-2016-09-16.jpg?1474009452");
         background-position: top;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
     }
 </style>
