--- a/Izakanyaa-code/index.html
+++ b/Izakanyaa-code/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.22.0/phaser-arcade-physics.min.js"></script>
-    <title>Card Game</title>
-  </head>
-  <body>
-    <h1>Card Game</h1>
-    <div id="phaser-game"></div>
-    <script type="module" src="js/game.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.22.0/phaser-arcade-physics.min.js"></script>
+</head>
+<body style="margin: 0;">
+<div  id="phaser-game"></div>
+<script type="module" src="js/game.js"></script>
+</body>
 </html>
