--- a/Izakanyaa-code/index.html
+++ b/Izakanyaa-code/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.22.0/phaser-arcade-physics.min.js"></script>
   </head>
-  <body style="margin: 0;">
+  <body style="margin: 0; background-color: black">
     <div  id="phaser-game"></div>
     <script type="module" src="js/game.js"></script>
   </body>
