Web design edit, adding footer and setting toast timers to 4 seconds

--- a/cat-face/public/index.html
+++ b/cat-face/public/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <title>Cool Cat's Izakanyaa</title>
+</head>
+<body>
+<noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+</noscript>
+<div id="app"></div>
+</body>
 </html>
 
 <style>
     body {
-        background-image: url("https://cdna.artstation.com/p/assets/images/images/003/468/688/large/slawek-fedorczuk-slawek-fedorczuk-2016-09-16.jpg?1474009452");
-        background-position: top;
+        background-image: url("https://i.pinimg.com/originals/10/9b/41/109b41faeb600951a942ef8bdb57781a.gif");
+        background-position: center;
         background-repeat: no-repeat;
         background-attachment: fixed;
+        background-size: cover;
+    }
+    footer {
+        text-align: center;
     }
 </style>
